--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </div>
   <div class="container">
     <div class="panel">
-      <h1>Калькулятор фарма аден</h1>
+      <h1>Калькулятор фарма Аден</h1>
       <div id="profile-status">Пожалуйста, выберите или создайте профиль.</div>
       <div class="field">
         <label for="location">Локация (необязательно)</label>
